# qmap

./: .license-tools-config.json  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  UPGRADING.md  noxfile.py  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: cd.yml  ci.yml  templating.yml  upstream.yml
bindings/clifford_synthesis/: CMakeLists.txt  clifford_synthesis.cpp
bindings/hybrid_mapper/: CMakeLists.txt  hybrid_mapper.cpp
bindings/na/: CMakeLists.txt  na.cpp  register_state_preparation.cpp  register_zoned.cpp
bindings/na/nasp/: CMakeLists.txt  nasp.cpp
bindings/na/zoned/: CMakeLists.txt  zoned.cpp
bindings/sc/: CMakeLists.txt  sc.cpp
cmake/: ExternalDependencies.cmake
docs/: contributing.md  index.md  installation.md  mapping.md  tooling.md
eval/clifford_state_prep/: clifford_state_prep_eval.py  monitor_progress.py  visualize_clifford_synthesis.py
eval/na/zoned/: eval_ids_relaxed_routing.py  eval_native_gate_decomposition.py
include/hybridmap/: HybridSynthesisMapper.hpp
include/na/zoned/: Compiler.hpp  Types.hpp
python/mqt/qmap/: __init__.py  clifford_synthesis.pyi  hybrid_mapper.pyi  sc.pyi
src/hybridmap/: HybridSynthesisMapper.cpp
test/hybridmap/: test_hybrid_synthesis_map.cpp
test/na/zoned/: test_code_generator.cpp  test_compiler.cpp  test_decomposer.cpp  test_native_gate_decomposer.cpp  test_theta_opt_scheduler.cpp
test/python/clifford_synthesis/: test_clifford_synthesis.py
test/python/hybrid_mapper/: test_hybrid_synthesis.py
test/python/sc/: test_compile.py  test_exact_mapper.py  (+2 more)
(+23 files in other folders)
